# codex-usage-display

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT_PLAN.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  esp32.ino  lv_conf.h  platformio.ini
.codex/hooks/: codex_display_event.py
.github/workflows/: ci.yml
LICENSES/: OFL-1.1.txt
companion/: __init__.py  install_hook.py  install_launch_agent.py  pyproject.toml  run.sh
companion/codex_display/: __init__.py  actions.py  app_server.py  ble.py  constants.py  hook_events.py  local_usage.py  main.py  metrics.py  protocol.py
companion/tests/: __init__.py  test_actions.py  test_app_server.py  test_ble.py  test_hook_events.py  test_install_hook.py  test_install_launch_agent.py  test_local_usage.py  test_metrics.py  test_protocol.py
docs/: BLE_PROTOCOL.md
src/: app_state.cpp  app_state.h  ble_bridge.cpp  ble_bridge.h  board_config.h  main.cpp  ui.cpp  ui.h
src/fonts/: font_montserrat_100.c
